rebrand from los to ax

--- a/res/values-af/cm_strings.xml
+++ b/res/values-af/cm_strings.xml
@@ -21,7 +21,7 @@
     </plurals>
     <string name="show_dev_on_cm">Jy het die ontwikkeling opsies geaktiveer!</string>
     <string name="show_dev_already_cm">Nie nodig, het jy reeds die ontwikkeling opsies geaktiveer.</string>
-    <string name="lineagelicense_title">LineageOS Regs</string>
+    <string name="lineagelicense_title">AxiomOS Regs</string>
     <string name="increasing_ring_volume_option_title">Toenemende luitoon volume</string>
     <string name="increasing_ring_min_volume_title">Begin volume</string>
     <string name="increasing_ring_ramp_up_time_title">Tydsduur</string>
