--- a/res/values-bg/cm_strings.xml
+++ b/res/values-bg/cm_strings.xml
@@ -29,7 +29,7 @@
     <string name="backup_transport_title">Изберете доставчик на резервни копия</string>
     <string name="berry_black_theme_title">Натурално черно</string>
     <string name="berry_black_theme_summary">Натурален черен фон за тъмна тема</string>
-    <string name="lineagelicense_title">LineageOS правна информация</string>
+    <string name="lineagelicense_title">AxiomOS правна информация</string>
     <string name="status_bar_double_tap_to_sleep_title">Натиснете, за заспиване</string>
     <string name="status_bar_double_tap_to_sleep_summary">Докоснете двукратно лентата на състоянието или заключващия екран, за да изключите дисплея</string>
     <string name="increasing_ring_volume_option_title">Увеличаване силата на звука при звънене</string>
