--- a/res/values-cs/cm_strings.xml
+++ b/res/values-cs/cm_strings.xml
@@ -31,7 +31,7 @@
     <string name="backup_transport_title">Vyberte poskytovatele zálohování</string>
     <string name="berry_black_theme_title">Čistě černý</string>
     <string name="berry_black_theme_summary">Čistě černé pozadí při tmavém motivu</string>
-    <string name="lineagelicense_title">Právní ujednání LineageOS</string>
+    <string name="lineagelicense_title">Právní ujednání AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Klepnutím uspat</string>
     <string name="status_bar_double_tap_to_sleep_summary">Dvojitým poklepáním na stavovou lištu nebo zamykací obrazovku vypnout obrazovku</string>
     <string name="increasing_ring_volume_option_title">Zvyšující se hlasitost vyzvánění</string>
