--- a/res/values-es-rUS/cm_strings.xml
+++ b/res/values-es-rUS/cm_strings.xml
@@ -24,7 +24,7 @@
     <string name="adb_enable_root">Depuración como Superusuario</string>
     <string name="adb_enable_summary_root">Permitir ejecutar la depuración de Android como superusuario</string>
     <string name="berry_black_theme_title">Negro puro</string>
-    <string name="lineagelicense_title">Licencia de LineageOS</string>
+    <string name="lineagelicense_title">Licencia de AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Pulsar para suspender</string>
     <string name="status_bar_double_tap_to_sleep_summary">Pulsa dos veces en la barra de estado o en la pantalla de bloqueo para apagar la pantalla</string>
     <string name="increasing_ring_volume_option_title">Volumen de tono ascendente</string>
