--- a/res/values-es/cm_strings.xml
+++ b/res/values-es/cm_strings.xml
@@ -27,7 +27,7 @@
     <string name="backup_transport_title">Seleccionar el proveedor de la copia de seguridad</string>
     <string name="berry_black_theme_title">Negro puro</string>
     <string name="berry_black_theme_summary">Fondo negro puro para el tema oscuro</string>
-    <string name="lineagelicense_title">Licencia de LineageOS</string>
+    <string name="lineagelicense_title">Licencia de AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Pulsar para suspender</string>
     <string name="status_bar_double_tap_to_sleep_summary">Doble toque en la barra de estado o pantalla de bloqueo para apagar la pantalla</string>
     <string name="increasing_ring_volume_option_title">Volumen de timbre ascendente</string>
