--- a/res/values-fi/cm_strings.xml
+++ b/res/values-fi/cm_strings.xml
@@ -29,7 +29,7 @@
     <string name="backup_transport_title">Valitse varmuuskopiopalvelu</string>
     <string name="berry_black_theme_title">Kokonaan musta</string>
     <string name="berry_black_theme_summary">Kokonaan musta tausta tummalle teemalle</string>
-    <string name="lineagelicense_title">LineageOSin lakiasiat</string>
+    <string name="lineagelicense_title">AxiomOSin lakiasiat</string>
     <string name="status_bar_double_tap_to_sleep_title">Sammuta näyttö napauttamalla</string>
     <string name="status_bar_double_tap_to_sleep_summary">Sulje laitteen näyttö tuplanapauttamalla tilapalkkia tai lukitusnäyttöä</string>
     <string name="increasing_ring_volume_option_title">Voimistuva soittoääni</string>
