--- a/res/values-gl/cm_strings.xml
+++ b/res/values-gl/cm_strings.xml
@@ -29,7 +29,7 @@
     <string name="backup_transport_title">Seleccionar provedor de copias de seguranza</string>
     <string name="berry_black_theme_title">Negro puro</string>
     <string name="berry_black_theme_summary">Fondo negro puro para o tema escuro</string>
-    <string name="lineagelicense_title">Licenza de LineageOS</string>
+    <string name="lineagelicense_title">Licenza de AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Tocar para suspender</string>
     <string name="status_bar_double_tap_to_sleep_summary">Duplo toque na barra de estado ou na pantalla de bloqueo para apagar a pantalla</string>
     <string name="increasing_ring_volume_option_title">Aumentando o volume de chamada</string>
