--- a/res/values-gu/cm_strings.xml
+++ b/res/values-gu/cm_strings.xml
@@ -21,7 +21,7 @@
     </plurals>
     <string name="show_dev_on_cm">તમે ડેવેલપમેન્ટ સેટિંગ્સ સક્ષમ કર્યું!</string>
     <string name="show_dev_already_cm">જરૂર નથી, તમે ડેવેલપમેન્ટ સેટિંગ્સ સક્ષમ કરી ચુક્યા છો.</string>
-    <string name="lineagelicense_title">LineageOS lકાયદાકીય</string>
+    <string name="lineagelicense_title">AxiomOS lકાયદાકીય</string>
     <string name="increasing_ring_volume_option_title">રિંગ વૉલ્યુમ વધારી રહ્યા છે</string>
     <string name="increasing_ring_min_volume_title">શરૂઆતનું વૉલ્યુમ</string>
     <string name="increasing_ring_ramp_up_time_title">રૅમ્પ-અપ સમય</string>
