--- a/res/values-lv/cm_strings.xml
+++ b/res/values-lv/cm_strings.xml
@@ -15,7 +15,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineagelicense_title">LineageOS atbildība</string>
+    <string name="lineagelicense_title">AxiomOS atbildība</string>
     <string name="unlock_scramble_pin_layout_title">Samaisīt izkārtojumu</string>
     <string name="unlock_scramble_pin_layout_summary">Atslēdzot iekārtu, samaisīt PIN izkārtojumu</string>
     <string name="high_touch_sensitivity_title">Augsta pieskāriena jutība</string>
