--- a/res/values-ml/cm_strings.xml
+++ b/res/values-ml/cm_strings.xml
@@ -21,7 +21,7 @@
     </plurals>
     <string name="show_dev_on_cm">നിങ്ങൾ ഡെവലപ്പ്മെന്റ് ക്രമീകരണങ്ങൾ പ്രാപ്തമാക്കി!</string>
     <string name="show_dev_already_cm">ആവശ്യമില്ല, നിങ്ങൾ ഇതിനകം ഡെവലപ്പ്മെന്റ് ക്രമീകരണങ്ങൾ പ്രാപ്തമാക്കി.</string>
-    <string name="lineagelicense_title">LineageOS ലീഗല്‍</string>
+    <string name="lineagelicense_title">AxiomOS ലീഗല്‍</string>
     <string name="increasing_ring_volume_option_title">വര്‍ദ്ധിക്കുന്ന റിംഗ് വോളിയം</string>
     <string name="increasing_ring_min_volume_title">വോളിയം ആരംഭിക്കുക</string>
     <string name="increasing_ring_ramp_up_time_title">റാംപ്-അപ്പ് സമയം</string>
