--- a/res/values-si/cm_strings.xml
+++ b/res/values-si/cm_strings.xml
@@ -15,7 +15,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineagelicense_title">LineageOS නීතිමය තොරතුරු</string>
+    <string name="lineagelicense_title">AxiomOS නීතිමය තොරතුරු</string>
     <string name="unlock_scramble_pin_layout_title">සැලැස්ම පටලවන්න</string>
     <string name="unlock_scramble_pin_layout_summary">උපාංගය අගුළු අරින විට PIN සැලැස්ම පටලවන්න</string>
     <string name="high_touch_sensitivity_title">ඉහළ ස්පර්ශ සංවේදිතාව</string>
