--- a/res/values-sk/cm_strings.xml
+++ b/res/values-sk/cm_strings.xml
@@ -31,7 +31,7 @@
     <string name="backup_transport_title">Vybrať poskytovateľa zálohovania</string>
     <string name="berry_black_theme_title">Čistá čierna</string>
     <string name="berry_black_theme_summary">Čisto čierne pozadie pre tmavú tému vzhľadu</string>
-    <string name="lineagelicense_title">Právne informácie LineageOS</string>
+    <string name="lineagelicense_title">Právne informácie AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Kliknutím uspať</string>
     <string name="status_bar_double_tap_to_sleep_summary">Vypnúť obrazovku dvojklikom na stavový riadok alebo na obrazovku uzamknutia</string>
     <string name="increasing_ring_volume_option_title">Zvyšovanie hlasitosti zvonenia</string>
