--- a/res/values-th/cm_strings.xml
+++ b/res/values-th/cm_strings.xml
@@ -26,7 +26,7 @@
     <string name="adb_enable_summary_root">อนุญาตการดีบัก Android ในฐานะรูท</string>
     <string name="berry_black_theme_title">ดำสนิท</string>
     <string name="berry_black_theme_summary">พื้นหลังสีดำสนิทสำหรับธีมมืด</string>
-    <string name="lineagelicense_title">เกี่ยวกับกฎหมาย LineageOS</string>
+    <string name="lineagelicense_title">เกี่ยวกับกฎหมาย AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">แตะเพื่อหลับ</string>
     <string name="status_bar_double_tap_to_sleep_summary">แตะสองครั้งที่แถบสถานะเพื่อพักหน้าจอ</string>
     <string name="increasing_ring_volume_option_title">การเพิ่มเสียงเรียกเข้า</string>
