--- a/res/values-be/cm_strings.xml
+++ b/res/values-be/cm_strings.xml
@@ -17,7 +17,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="show_dev_on_cm">Налады для распрацоўнікаў улучаны!</string>
     <string name="show_dev_already_cm">Не патрэбна, налады для распрацоўнікаў ужо ўлучаны.</string>
-    <string name="lineagelicense_title">Палітыка прыватнасці LineageOS</string>
+    <string name="lineagelicense_title">Палітыка прыватнасці AxiomOS</string>
     <string name="increasing_ring_volume_option_title">Нарастальная гучнасць званку</string>
     <string name="increasing_ring_min_volume_title">Пачатковая гучнасць</string>
     <string name="increasing_ring_ramp_up_time_title">Час павелічэння</string>
