--- a/res/values-ca/cm_strings.xml
+++ b/res/values-ca/cm_strings.xml
@@ -29,7 +29,7 @@
     <string name="backup_transport_title">Trieu un proveïdor de còpia de seguretat</string>
     <string name="berry_black_theme_title">Negre pur</string>
     <string name="berry_black_theme_summary">Fons negre pur per al tema fosc</string>
-    <string name="lineagelicense_title">Llicència LineageOS</string>
+    <string name="lineagelicense_title">Llicència AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Pica per posar en repòs</string>
     <string name="status_bar_double_tap_to_sleep_summary">Pica dues vegades a la barra d\'estat o a la pantalla de bloqueig per apagar la pantalla</string>
     <string name="increasing_ring_volume_option_title">Volum del to de trucada creixent</string>
