--- a/res/values-cy/cm_strings.xml
+++ b/res/values-cy/cm_strings.xml
@@ -33,7 +33,7 @@
     <string name="backup_transport_title">Dewis darparwr wrth gefn</string>
     <string name="berry_black_theme_title">Du pur</string>
     <string name="berry_black_theme_summary">Cefndir du pur i\'r thema dywyll</string>
-    <string name="lineagelicense_title">Cyfreithiol LineageOS</string>
+    <string name="lineagelicense_title">Cyfreithiol AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Tapio i gysgu</string>
     <string name="status_bar_double_tap_to_sleep_summary">Tapio dwywaith ar y bar statws neu\'r sgrin cloi i droi\'r sgrin i ffwrdd</string>
     <string name="increasing_ring_volume_option_title">Uchder sain yn cynyddu</string>
