--- a/res/values-en-rIN/cm_strings.xml
+++ b/res/values-en-rIN/cm_strings.xml
@@ -29,7 +29,7 @@
     <string name="backup_transport_title">Select backup provider</string>
     <string name="berry_black_theme_title">Pure black</string>
     <string name="berry_black_theme_summary">Pure black background for dark theme</string>
-    <string name="lineagelicense_title">LineageOS legal</string>
+    <string name="lineagelicense_title">AxiomOS legal</string>
     <string name="status_bar_double_tap_to_sleep_title">Tap to sleep</string>
     <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar or lockscreen to turn off the display</string>
     <string name="fingerprint_enroll_find_sensor_message_front" product="tablet">Locate the fingerprint sensor on the front of your tablet.</string>
