--- a/res/values-gd/cm_strings.xml
+++ b/res/values-gd/cm_strings.xml
@@ -31,7 +31,7 @@
     <string name="backup_transport_title">Tagh solaraiche nan lethbhreacan-glèidhidh</string>
     <string name="berry_black_theme_title">Dubh</string>
     <string name="berry_black_theme_summary">Cleachd cùlaibh dubh leis an ùrlar dhorcha</string>
-    <string name="lineagelicense_title">Sgrìobhainnean laghail LineageOS</string>
+    <string name="lineagelicense_title">Sgrìobhainnean laghail AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Thoir gnogag airson cadal</string>
     <string name="status_bar_double_tap_to_sleep_summary">Thoir gnogag dhùbailte air bàr na staid no air an sgrìn-ghlasaidh gus an uidheam-taisbeanaidh a chur dheth</string>
     <string name="increasing_ring_volume_option_title">Cur an àirde fuaim na seirme</string>
