--- a/res/values-hu/cm_strings.xml
+++ b/res/values-hu/cm_strings.xml
@@ -29,7 +29,7 @@
     <string name="backup_transport_title">Mentési-szolgáltatás kiválasztása</string>
     <string name="berry_black_theme_title">Valódi fekete</string>
     <string name="berry_black_theme_summary">Egy igazán fekete háttér a fekete témákhoz</string>
-    <string name="lineagelicense_title">LineageOS jogi nyilatkozat</string>
+    <string name="lineagelicense_title">AxiomOS jogi nyilatkozat</string>
     <string name="status_bar_double_tap_to_sleep_title">Dupla érintésre alvómód</string>
     <string name="status_bar_double_tap_to_sleep_summary">Az állapotsor vagy a záróképernyő dupla érintésére kikapcsol a képernyő</string>
     <string name="increasing_ring_volume_option_title">Emelkedő csengőhang</string>
