--- a/res/values-it/cm_strings.xml
+++ b/res/values-it/cm_strings.xml
@@ -29,7 +29,7 @@
     <string name="backup_transport_title">Seleziona un gestore di backup</string>
     <string name="berry_black_theme_title">Nero puro</string>
     <string name="berry_black_theme_summary">Tema scuro con sfondo nero</string>
-    <string name="lineagelicense_title">Note legali LineageOS</string>
+    <string name="lineagelicense_title">Note legali AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Tocca per spegnere lo schermo</string>
     <string name="status_bar_double_tap_to_sleep_summary">Tocca due volte la barra di stato o la schermata di sblocco per spegnere lo schermo</string>
     <string name="fingerprint_enroll_find_sensor_message_front" product="tablet">Individua il sensore d\'impronte digitali sulla parte anteriore del tuo tablet.</string>
