--- a/res/values-kab-rDZ/cm_strings.xml
+++ b/res/values-kab-rDZ/cm_strings.xml
@@ -21,7 +21,7 @@
     <string name="advanced_keyboard_settings_title">Iɣewwaṛen leqqayen</string>
     <string name="berry_black_theme_title">Aberkan zeddigen</string>
     <string name="berry_black_theme_summary">Agilal aberkan zeddigen i usentel aberkan</string>
-    <string name="lineagelicense_title">Talɣut tusḍift n LineageOS</string>
+    <string name="lineagelicense_title">Talɣut tusḍift n AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Tekki akken ad yeṭṭes</string>
     <string name="increasing_ring_volume_option_title">A semɣeṛ n imesli n uṭenṭen</string>
     <string name="increasing_ring_min_volume_title">Imesli n tazwara</string>
