--- a/res/values-ko/cm_strings.xml
+++ b/res/values-ko/cm_strings.xml
@@ -28,7 +28,7 @@
     <string name="backup_transport_title">백업 제공자 선택</string>
     <string name="berry_black_theme_title">검정색</string>
     <string name="berry_black_theme_summary">어두운 테마 사용 시 완전 검정색 배경 사용</string>
-    <string name="lineagelicense_title">LineageOS 법적 고지</string>
+    <string name="lineagelicense_title">AxiomOS 법적 고지</string>
     <string name="status_bar_double_tap_to_sleep_title">두드려 화면 끄기</string>
     <string name="status_bar_double_tap_to_sleep_summary">상태 표시줄이나 잠금 화면을 두 번 두드려 화면 끄기</string>
     <string name="fingerprint_enroll_find_sensor_message_front" product="tablet">태블릿 앞면에 지문 센서가 있습니다.</string>
