--- a/res/values-sq/cm_strings.xml
+++ b/res/values-sq/cm_strings.xml
@@ -29,7 +29,7 @@
     <string name="backup_transport_title">Zgjidhni siguruesin e rezervës</string>
     <string name="berry_black_theme_title">E zezë e pastër</string>
     <string name="berry_black_theme_summary">Sfond i zi i pastër për temë të errët</string>
-    <string name="lineagelicense_title">Liçensa e LineageOS</string>
+    <string name="lineagelicense_title">Liçensa e AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Shtyp për të fjetur</string>
     <string name="status_bar_double_tap_to_sleep_summary">Shtyp dy herë shiritin e ekranit ose mbyllekranin për të fikur ekranin</string>
     <string name="fingerprint_enroll_find_sensor_message_front" product="tablet">Gjeni sensorin e gjurmës së gishtit në pjesën e përparme të tabletit tuaj</string>
