--- a/res/values-vi/cm_strings.xml
+++ b/res/values-vi/cm_strings.xml
@@ -28,7 +28,7 @@
     <string name="backup_transport_title">Chọn nơi lưu trữ dữ liệu sao lưu</string>
     <string name="berry_black_theme_title">Đen tuyền</string>
     <string name="berry_black_theme_summary">Nền đen tuyền cho chủ đề tối</string>
-    <string name="lineagelicense_title">Bộ phận pháp chế của LineageOS</string>
+    <string name="lineagelicense_title">Bộ phận pháp chế của AxiomOS</string>
     <string name="status_bar_double_tap_to_sleep_title">Chạm để tắt màn hình</string>
     <string name="status_bar_double_tap_to_sleep_summary">Chạm hai lần vào thanh trạng thái hoặc màn hình khoá để tắt màn hình</string>
     <string name="increasing_ring_volume_option_title">Tăng âm lượng chuông</string>
