--- a/res/values-zh-rCN/cm_strings.xml
+++ b/res/values-zh-rCN/cm_strings.xml
@@ -28,7 +28,7 @@
     <string name="backup_transport_title">选择备份提供商</string>
     <string name="berry_black_theme_title">纯黑色</string>
     <string name="berry_black_theme_summary">暗色主题使用纯黑色背景</string>
-    <string name="lineagelicense_title">LineageOS 法律信息</string>
+    <string name="lineagelicense_title">AxiomOS 法律信息</string>
     <string name="status_bar_double_tap_to_sleep_title">点按以睡眠</string>
     <string name="status_bar_double_tap_to_sleep_summary">双击状态栏或锁屏以关闭屏幕</string>
     <string name="fingerprint_enroll_find_sensor_message_front" product="tablet">在您的平板电脑正面找到指纹传感器。</string>
